part3/3_09/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: main-namespace
  labels:
    name: main-namespace-label
